--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,7 +41,7 @@ jobs:
       # Set a target branch for deployment.
       # publish_branch: # optional, default is gh-pages
       # Set an input directory for deployment.
-        publish_dir: WebSudoku\Client\bin\Release\net6.0\browser-wasm\publish\wwwroot # optional, default is public
+        publish_dir: WebSudoku\Client\bin\Release\net6.0\wwwroot # optional, default is public
       # Set an destination subdirectory for deployment.
       # destination_dir: # optional, default is 
       # Set an external repository (owner/repo).
