--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,9 +23,13 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      if: github.event_name == 'push'
     - name: Publish
       run: dotnet publish --configuration Release
-      if: github.event_name == 'push'
+    - name: Move files
+      run: |
+        mkdir ./public
+        mv WebSudoku/Client/bin/Release/net6.0/wwwroot ./public
   
     - name: GitHub Pages action
     # You may pin to the exact commit or the version.
@@ -41,7 +45,7 @@ jobs:
       # Set a target branch for deployment.
       # publish_branch: # optional, default is gh-pages
       # Set an input directory for deployment.
-        publish_dir: WebSudoku\Client\bin\Release\net6.0\wwwroot # optional, default is public
+        publish_dir: public #WebSudoku\Client\bin\Release\net6.0\wwwroot # optional, default is public
       # Set an destination subdirectory for deployment.
       # destination_dir: # optional, default is 
       # Set an external repository (owner/repo).
