--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,8 +29,17 @@ jobs:
       run: |
         dotnet publish --configuration Release
         mkdir ./public
-        mv WebSudoku/Client/bin/Release/net6.0/wwwroot ./public
-  
+        cp WebSudoku/Client/bin/Release/net6.0/wwwroot ./public
+    #- name: Upload a Build Artifact
+      #uses: actions/upload-artifact@v2.3.1
+      #with:
+        # Artifact name
+        # name: # optional, default is artifact
+        # A file, directory or wildcard pattern that describes what to upload
+        #path: WebSudoku/Client/bin/Release/net6.0/wwwroot
+        # The desired behavior if no files are found using the provided path.
+        # Duration after which artifact will expire in days. 0 means using default retention.
+        # retention-days: # optional
     - name: GitHub Pages action
     # You may pin to the exact commit or the version.
     # uses: peaceiris/actions-gh-pages@bbdfb200618d235585ad98e965f4aafc39b4c501
@@ -45,7 +54,7 @@ jobs:
       # Set a target branch for deployment.
       # publish_branch: # optional, default is gh-pages
       # Set an input directory for deployment.
-        publish_dir: public/wwwroot #WebSudoku\Client\bin\Release\net6.0\wwwroot # optional, default is public
+        publish_dir: WebSudoku/Client/bin/Release/net6.0/wwwroot #public/wwwroot #WebSudoku\Client\bin\Release\net6.0\wwwroot # optional, default is public
       # Set an destination subdirectory for deployment.
       # destination_dir: # optional, default is 
       # Set an external repository (owner/repo).
