--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
       if: github.event_name == 'push'
     - name: Publish and Move files
       run: |
-        dotnet publish --configuration Release
+        dotnet publish --configuration Release -p:BlazorEnableCompression=false
         mkdir ./public
         cp -r WebSudoku/Client/bin/Release/net6.0/wwwroot ./public
     # base href url value should be changed so that resources like CSS and scripts can load properly. 
