--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
@@ -27,39 +27,10 @@ jobs:
       if: github.event_name == 'push'
     - name: Publish and Move files
       run: |
-        dotnet publish --configuration Release -p:BlazorEnableCompression=false
+        dotnet publish WebSudoku/Client --configuration Release
         mkdir ./public
-        cp -r WebSudoku/Client/bin/Release/net6.0/wwwroot ./public
-    # base href url value should be changed so that resources like CSS and scripts can load properly. 
-    - name: Rewrite base href
-      if: success()
-      uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
-      with:
-        html_path: ${{ env.PUBLISH_DIR }}/index.html
-        base_href: BASE_URL or REPOSITORY_NAME
-        
-    # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
-    - name: Add .nojekyll file
-      run: touch ${{ env.PUBLISH_DIR }}/.nojekyll
-
-    - name: Commit to GitHub pages Repo
-      if: success()
-      uses: crazy-max/ghaction-github-pages@v1.5.1
-      with:
-        target_branch: gh-pages
-        build_dir: ${{ env.PUBLISH_DIR }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#- name: Upload a Build Artifact
-      #uses: actions/upload-artifact@v2.3.1
-      #with:
-        # Artifact name
-        # name: # optional, default is artifact
-        # A file, directory or wildcard pattern that describes what to upload
-        #path: WebSudoku/Client/bin/Release/net6.0/wwwroot
-        # The desired behavior if no files are found using the provided path.
-        # Duration after which artifact will expire in days. 0 means using default retention.
-        # retention-days: # optional
+        mv WebSudoku/Client/bin/Release/net6.0/wwwroot ./public
+  
     - name: GitHub Pages action
     # You may pin to the exact commit or the version.
     # uses: peaceiris/actions-gh-pages@bbdfb200618d235585ad98e965f4aafc39b4c501
@@ -74,7 +45,7 @@ jobs:
       # Set a target branch for deployment.
       # publish_branch: # optional, default is gh-pages
       # Set an input directory for deployment.
-        publish_dir: public #WebSudoku/Client/bin/Release/net6.0/wwwroot #public/wwwroot #WebSudoku\Client\bin\Release\net6.0\wwwroot # optional, default is public
+        publish_dir: public/wwwroot #WebSudoku\Client\bin\Release\net6.0\wwwroot # optional, default is public
       # Set an destination subdirectory for deployment.
       # destination_dir: # optional, default is 
       # Set an external repository (owner/repo).
