--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         dotnet publish WebSudoku.sln --configuration Release
         mkdir ./public
-        mv WebSudoku/Client/bin/Release/net6.0/wwwroot ./public
+        mv WebSudoku/Client/bin/Release/net6.0/publish/wwwroot ./public
   
     - name: GitHub Pages action
     # You may pin to the exact commit or the version.
