--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,9 +25,19 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
       if: github.event_name == 'push'
-    - name: Publish and Move files
+    - name: Publish
+      run: dotnet publish WebSudoku.sln --configuration Release
+    - name: Rewrite base href
+    # You may pin to the exact commit or the version.
+    # uses: SteveSandersonMS/ghaction-rewrite-base-href@5b54862a8831e012d4f1a8b2660894415fdde8ec
+      uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
+      with:
+        # Path to the HTML file to be updated
+        html_path: WebSudoku/Client/bin/Release/net6.0/publish/wwwroot/index.html
+        # New base href to be applied
+        base_href: WebSudoku
+    - name: Move files
       run: |
-        dotnet publish WebSudoku.sln --configuration Release
         mkdir ./public
         mv WebSudoku/Client/bin/Release/net6.0/publish/wwwroot ./public
   
