--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,7 +40,7 @@ jobs:
       run: |
         mkdir ./public
         mv WebSudoku/Client/bin/Release/net6.0/publish/wwwroot ./public
-        mv WebSudoku/Client/404.html ./public
+        mv WebSudoku/Client/404.html ./public/wwwroot
     - name: GitHub Pages action
     # You may pin to the exact commit or the version.
     # uses: peaceiris/actions-gh-pages@bbdfb200618d235585ad98e965f4aafc39b4c501
@@ -55,7 +55,7 @@ jobs:
       # Set a target branch for deployment.
       # publish_branch: # optional, default is gh-pages
       # Set an input directory for deployment.
-        publish_dir: public/wwwroot #WebSudoku\Client\bin\Release\net6.0\wwwroot # optional, default is public
+        publish_dir: public/wwwroot # optional, default is public
       # Set an destination subdirectory for deployment.
       # destination_dir: # optional, default is 
       # Set an external repository (owner/repo).
