--- a/WebSudoku/Server/WebSudoku.Server.csproj
+++ b/WebSudoku/Server/WebSudoku.Server.csproj
@@ -15,5 +15,9 @@
     <ProjectReference Include="..\Shared\WebSudoku.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
