--- a/WebSudoku/Client/WebSudoku.Client.csproj
+++ b/WebSudoku/Client/WebSudoku.Client.csproj
@@ -24,6 +24,9 @@
     <None Update="404.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="redirect-from-error-through-hash.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
