--- a/WebSudoku/Client/WebSudoku.Client.csproj
+++ b/WebSudoku/Client/WebSudoku.Client.csproj
@@ -21,10 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="wwwroot\js\redirect-from-error-through-hash.js">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="404.html">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="redirect-from-error-through-hash.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
