--- a/WebSudoku.Shared.Tests/WebSudoku.Shared.Tests.csproj
+++ b/WebSudoku.Shared.Tests/WebSudoku.Shared.Tests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="xunit" Version="2.8.0" />
+    <PackageReference Include="xunit.abstractions" Version="2.0.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
