Add Dark LayoutMode (default)
Add toggle for LayoutMode

Fix PrintSettings

--- a/WebSudoku/WebSudoku.csproj
+++ b/WebSudoku/WebSudoku.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\WebSudoku.Shared\WebSudoku.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
