--- a/WebSudoku.Shared/WebSudoku.Shared.csproj
+++ b/WebSudoku.Shared/WebSudoku.Shared.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>apb97.github.io.WebSudoku.Shared</RootNamespace>
   </PropertyGroup>
 
 </Project>
