Move wwwroot/Resources to ResxResources
Add *.json files int wwwroot/Resources

Update StringLocalizerFactory and LocalizationOptions

Add DataFormat enum

Add ResxData class with ResxDataContext

--- a/WebSudoku/WebSudoku.csproj
+++ b/WebSudoku/WebSudoku.csproj
@@ -27,6 +27,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="ResxResources\**\*.resx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="Shared\TimerDisplay.razor" />
   </ItemGroup>
 
