--- a/WebSudoku/WebSudoku.csproj
+++ b/WebSudoku/WebSudoku.csproj
@@ -12,18 +12,25 @@
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Remove="ResxResources\**\*.resx" />
+    <Content Include="ResxResources\**\*.resx">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <PublishState>Excluded</PublishState>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
   <Target Condition="$(ContinuousIntegrationBuild)==''" Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="SimpleResxToJson.CLI.exe --input=$(ProjectDir)ResxResources --output=$(ProjectDir)wwwroot/Resources" />
+    <Exec ContinueOnError="true" Condition="%(Extension)=='.resx' And ($([System.DateTime]::Parse('%(Content.ModifiedTime)').Ticks) &gt; $([System.IO.File]::GetLastWriteTime('$(ProjectDir)wwwroot/Resources/%(RecursiveDir)%(Filename).json').Ticks))"
+          Command="SimpleResxToJson.CLI.exe --input=$(ProjectDir)ResxResources/%(RecursiveDir)%(Filename)%(Extension) --output=$(ProjectDir)wwwroot/Resources/%(RecursiveDir)" />
   </Target>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.10" PrivateAssets="all" />
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="ResxResources\**\*.resx" />
   </ItemGroup>
 
   <ItemGroup>
