--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Build
       run: dotnet build -c Release --no-restore
     - name: Test
-      run: dotnet test --no-build
+      run: dotnet test -c Release --no-build
     - name: Publish
       if: github.event_name == 'push'
       run: dotnet publish WebSudoku.sln --configuration Release
