--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,31 +13,40 @@ jobs:
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v6
+  
     - name: Setup .NET
-      uses: actions/setup-dotnet@v4
+      uses: actions/setup-dotnet@v5
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 10.x
+        dotnet-quality: ga
+
     - name: Restore dependencies
       run: dotnet restore
+
     - name: Build
       run: dotnet build -c Release --no-restore
+
     - name: Test
       run: dotnet test -c Release --no-build
+
     - name: Publish
       if: github.event_name == 'push'
       run: dotnet publish WebSudoku.sln --configuration Release
+
     - name: Rewrite base href
       if: github.event_name == 'push'
       uses: SteveSandersonMS/ghaction-rewrite-base-href@v1.1.0
       with:
-        html_path: WebSudoku/bin/Release/net8.0/publish/wwwroot/index.html
+        html_path: WebSudoku/bin/Release/net10.0/publish/wwwroot/index.html
         base_href: WebSudoku
+
     - name: Move files
       if: github.event_name == 'push'
       run: |
         mkdir ./public
-        mv WebSudoku/bin/Release/net8.0/publish/wwwroot ./public
+        mv WebSudoku/bin/Release/net10.0/publish/wwwroot ./public
+
     - name: GitHub Pages action
       if: github.event_name == 'push'
       uses: peaceiris/actions-gh-pages@v4.0.0
