--- a/WebSudoku/WebSudoku.csproj
+++ b/WebSudoku/WebSudoku.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
@@ -22,21 +22,20 @@
     </Content>
   </ItemGroup>
 
-  <UsingTask Condition="$(ContinuousIntegrationBuild)=='true'" TaskName="SimpleResxToJson.BuildTask.SingleResxToJsonTask" AssemblyFile="$(NuGetPackageRoot)\apb97.simpleresxtojson.buildtask\0.3.0\tasks\net8.0\SimpleResxToJson.BuildTask.dll" />
+  <UsingTask Condition="$(ContinuousIntegrationBuild)=='true'" TaskName="SimpleResxToJson.BuildTask.SingleResxToJsonTask" AssemblyFile="$(NuGetPackageRoot)\apb97.simpleresxtojson.buildtask\0.3.1\tasks\net8.0\APB97.SimpleResxToJson.BuildTask.dll" />
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <!--Github Actions Task-->
     <SimpleResxToJson.BuildTask.SingleResxToJsonTask Condition="$(ContinuousIntegrationBuild)=='true' And %(Extension)=='.resx'" Input="$(ProjectDir)ResxResources/%(Content.RecursiveDir)%(Filename)%(Extension)" Output="$(ProjectDir)wwwroot/Resources/%(Content.RecursiveDir)" />
 
     <!--Local Task-->
-    <Exec ContinueOnError="true" Condition="$(ContinuousIntegrationBuild)=='' And %(Extension)=='.resx' And ($([System.DateTime]::Parse('%(Content.ModifiedTime)').Ticks) &gt; $([System.IO.File]::GetLastWriteTime('$(ProjectDir)wwwroot/Resources/%(RecursiveDir)%(Filename).json').Ticks))" Command="SimpleResxToJson.CLI.exe --input=$(ProjectDir)ResxResources/%(RecursiveDir)%(Filename)%(Extension) --output=$(ProjectDir)wwwroot/Resources/%(RecursiveDir)" />
+    <Exec ContinueOnError="true" Condition="$(ContinuousIntegrationBuild)=='' And %(Extension)=='.resx' And ($([System.DateTime]::Parse('%(Content.ModifiedTime)').Ticks) &gt; $([System.IO.File]::GetLastWriteTime('$(ProjectDir)wwwroot/Resources/%(RecursiveDir)%(Filename).json').Ticks))" Command="APB97.SimpleResxToJson.CLI.exe --input=$(ProjectDir)ResxResources/%(RecursiveDir)%(Filename)%(Extension) --output=$(ProjectDir)wwwroot/Resources/%(RecursiveDir)" />
   </Target>
 
   <ItemGroup>
-    <PackageReference Include="APB97.SimpleResxToJson.BuildTask" Version="0.3.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.10" PrivateAssets="all" />
-    <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="APB97.SimpleResxToJson.BuildTask" Version="0.3.1" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="10.0.2" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
